src/test/ui/parser/issues/issue-70583-block-is-empty-2.stderr
error: unexpected closing delimiter: `}`
  --> $DIR/issue-70583-block-is-empty-2.rs:14:1
   |
LL |         match self {
   |                    - this delimiter might not be properly closed...
LL |             ErrorHandled::Reported => {}}
   |                                         - ...as it matches this but it has different indentation
...
LL | }
   | ^ unexpected closing delimiter

error: aborting due to previous error

